--- a/swayosd/.config/swayosd/style.css
+++ b/swayosd/.config/swayosd/style.css
@@ -36,7 +36,11 @@ window#osd progress {
   min-height: inherit;
   border-radius: inherit;
   border: none;
-  background: #a6e3a1;
+  background-image: linear-gradient(90deg, #654ea3, #eaafc8);
+}
+
+window#osd.brightness progress {
+  background-image: linear-gradient(90deg, #f6d365, #fda085);
 }
 
 window#osd.muted progress {
