--- a/swayosd/.config/swayosd/style.css
+++ b/swayosd/.config/swayosd/style.css
@@ -36,7 +36,7 @@ window#osd progress {
   min-height: inherit;
   border-radius: inherit;
   border: none;
-  background-image: linear-gradient(90deg, #654ea3, #eaafc8);
+  background-image: linear-gradient(90deg, #F7F7F7, #F7F7F7);
 }
 
 window#osd.brightness progress {
